# wrackspurt

./: .env.example  .gitignore  .prettierignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/desktop/: README.md  package.json
apps/desktop/scripts/: build-sidecar.mjs  dev-web.mjs
apps/desktop/sidecar/: .gitkeep
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  sidecar.rs
apps/web/: next.config.mjs  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/artifacts/: route.ts
apps/web/app/api/chat/: route.ts
apps/web/app/api/doctor/: route.ts
apps/web/app/api/files/: route.ts
apps/web/app/api/notebooks/: route.ts
apps/web/app/api/notebooks/[id]/: route.ts
apps/web/app/api/settings/: route.ts
apps/web/app/api/skills/: route.ts
apps/web/app/api/sources/: route.ts
apps/web/app/api/workspaces/: route.ts
apps/web/app/settings/: page.tsx
apps/web/components/: app-shell.tsx  chat-panel.tsx  citation-panel.tsx  file-explorer.tsx  language-switch.tsx  notebook-sidebar.tsx  provider-setup-dialog.tsx  source-list.tsx  task-status-panel.tsx  toast-viewport.tsx  workspace-shell.tsx  workspace-switcher.tsx
apps/web/lib/: api-client.ts  audit-log.ts  i18n.ts  services.ts  skill-registry.ts  skills.ts  toast-store.ts  workspace-files.ts  workspace-fs.ts  workspace-store.ts
apps/web/test/: workspace.test.ts
docs/: design-summary.md  progress.md
(+6 files in other folders)
