[package]
name = "wrackspurt-desktop"
version = "0.0.1"
description = "Wrackspurt desktop shell"
authors = ["Wrackspurt"]
edition = "2021"

[lib]
name = "wrackspurt_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
